<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_doadoa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_nama_doa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/template_text_judul_doa"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt_doa_arab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_nama_doa"
        android:layout_marginTop="20dp"
        android:background="#CECECE"
        android:padding="16dp"
        android:text="@string/template_text_arab_doa" />

    <TextView
        android:id="@+id/txt_doa_arti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_doa_arab"
        android:layout_marginTop="20dp"
        android:background="#CECECE"
        android:padding="16dp"
        android:text="@string/template_text_arti_doa" />


    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="@dimen/width_10dp"
        android:text="@string/btn_play" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/width_10dp"
        android:layout_toEndOf="@+id/btnPlay"
        android:layout_toRightOf="@+id/btnPlay"
        android:text="@string/btn_pause" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/width_10dp"
        android:layout_toEndOf="@+id/btnPause"
        android:layout_toRightOf="@+id/btnPause"
        android:text="@string/btn_stop" />

</RelativeLayout>