<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Home">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarId"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fcfcfc"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <!--One Parrent View-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <!--One CardView-->
                <android.support.v7.widget.CardView
                    android:id="@+id/doacard"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <!--One Nested Parrent View-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:contentDescription="@string/my_images"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundpurple"
                            android:padding="10dp"
                            android:src="@drawable/doa2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/doa_doa"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/kumpulan_doa_doa"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>
                    <!--End One Nested Parrent View-->
                </android.support.v7.widget.CardView>
                <!--End One CardView-->

                <!--Two CardView-->
                <android.support.v7.widget.CardView
                    android:id="@+id/profilcard"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <!--Two Nested Parrent View-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:contentDescription="@string/my_images"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cercleshape"
                            android:padding="10dp"
                            android:src="@drawable/ic_persondp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/profil"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/profil_saya"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>
                    <!--End Two Nested Parrent View-->
                </android.support.v7.widget.CardView>
                <!--End Two CardView-->
            </LinearLayout>
            <!--End One Parrent View-->

            <!--Two Parrent View-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <!--One CardView-->
                <android.support.v7.widget.CardView
                    android:id="@+id/motocard"
                    android:layout_width="340dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <!--One Nested Parrent View-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:contentDescription="@string/my_images"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundgreen"
                            android:padding="10dp"
                            android:src="@drawable/ic_motto" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/motto_1"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/motto_1"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>
                    <!--One Nested Parrent View-->
                </android.support.v7.widget.CardView>
                <!--End One CardView-->
            </LinearLayout>
            <!--End Two Parrent View-->
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>